# autoedit2

./: .dockerignore  .gitignore  Chatur_AI_HR_demo_optimized_f435dcaa.srt  Dockerfile  README.md  celery_config.py  docker-compose-cloud.yml  docker-compose.yml  drivetest.py  entrypoint.sh  google_drive_uploader.py  main_video_processor.py  mongodb_manager.py  pyproject.toml  requirements.txt  server.py  server_celery.py  service_keys.json  start_local.bat  tasks.py  test.py  testr2.py  upload_log.txt  video_summarizer.py  video_summarizer2.py  video_transcriber.py
app/: __init__.py  config.py  main.py  models.py
app/auth/: middleware.py  models.py  routes.py  service.py
app/database/: __init__.py  mongodb_manager.py
app/middleware/: __init__.py  security.py
app/services/: __init__.py  cloudflarer2_uploader.py  google_drive_uploader.py  video_processor.py  video_summarizer2.py  video_transcriber.py
app/workers/: celery_app.py  ffmpeg_worker.py  processing_worker.py
tests/: test_playai.py  test_vibevoice.py
