# pyproject.toml
[project]
name = "fastapi-demo"
version = "0.1.0"
description = "A FastAPI project with Celery for video processing."
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings==2.10.1",

    # Celery and task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "flower>=2.0.1",
    "kombu>=5.3.7",

    # Video processing & AI/ML
    "ffmpeg-python>=0.2.0",
    "faster-whisper>=1.0.2",
    "openai>=1.23.6",
    "tiktoken>=0.7.0",
    "numpy>=1.26.4",
    "pillow==11.3.0".

    # TTS engines
    "gtts>=2.5.1",
    "murf>=2.0.2",

    # Cloud storage & Auth
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.128.0",

    # Database
    "pymongo>=4.7.2",
    "motor>=3.4.0",

    # AI/ML
    "azure-identity>=1.16.1",

    # Utilities
    "aiohttp>=3.9.5",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",

    # Monitoring and logging
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.0.1",

    # Testing (optional, for development)
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
]